17강까지의 내용 220818

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,24 @@ server.servlet.encoding.force-response: true
 server.port = 7272
 
 
-#h2 DB ? ?? ?? ??
+#h2 DB, Access Allow to Web Console
 spring.h2.console.enabled=true
+
+# data.sql admit config(over springboot 2.5)
+spring.jpa.defer-datasource-initialization=true
+
+# JPA loging config
+# Output Sql Query To Debug Level
+logging.level.org.hibernate.SQL = DEBUG
+
+# Show Log Pretty
+spring.jpa.properties.hibernate.format_sql=true
+
+# Show Parameters
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# DB URL FIX Config
+#Not Generate Unique URL
+spring.datasource.generate-unique-name = false
+#Config Fixed URL
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
